# Agent-Ecosystem-Salesperson-and-Payment

./: .dockerignore  .env  .gitignore  DATA_REFACTOR_REDIS_COMPLETE.md  DemoScenarios.md  SETUP_GUIDE.md  compose.yaml  email_validator.py  exampleCreateOrderPayloadRequest.json  exampleCreateOrderPayloadResponse.json  exampleQueryStatusPayloadRequest.json  exampleQueryStatusPayloadResponse.json  k8s.yaml  pyproject.toml  requirements.txt  setup.py
deploy/: k8s.yaml
deploy/db/: docker-compose.yaml  init_product.sql
deploy/db_es/: .env  docker-compose.yaml  init_db.sql  init_product.sql
deploy/db_es_redis/: .env  README.md  docker-compose.yaml  init_db.sql
deploy/docker/: Dockerfile.a2a_app  Dockerfile.adk_web  Dockerfile.server_payment_tool  Dockerfile.server_salesperson_tool
deploy/milvus/: docker-compose.yml
email_validator-2.0.0.dist-info/: METADATA  WHEEL
scripts/: run.bat  run_for_anaconda_env.bat  run_for_venv.bat
scripts/db/: init_product.sql
src/: config.py
src/a2a/: __init__.py  api.py  controller.py  protocol.py  run_app.py  server.py  service.py  session.py
src/api_gateway/: __init__.py  app.py  connection_manager.py
src/auth/: __init__.py  dependencies.py  router.py  schemas.py
src/chat_ui/: __init__.py  chat_app.py
src/data/: __init__.py  connection.py  db_connection.py  es_connection.py  products.json  vs_connection.py
src/merchant_agent/: __init__.py  agent.py  instruction.txt  mcp_client.py  rule_based.py  urls.py
src/my_a2a/: __init__.py
src/my_a2a_common/: __init__.py
src/my_agent/: A2aWorkflow.md  (+2 more)
tests/: test_tools.py
(+262 files in other folders)
