[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_ecosystem_salesperson_and_payment"
version = "0.1.0"
description = "Salesperson + Payment Agent"
authors = [
  { name="biabeogo147", email="biabeogo147@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
